--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,13 @@
 %prod.quarkus.datasource.password=quarkus_test
 
 quarkus.hibernate-orm.database.generation=drop-and-create
-quarkus.hibernate-orm.log.sql=false
+quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=import.sql
 
 # Reactive config
 %prod.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost/quarkus_test
+
+quarkus.log.category."io.quarkus.vertx.http.accesslog"=DEBUG
+#quarkus.log.file.enable=true
+#quarkus.log.file.path=/var/log/myapp.log
+
