basket with fruit element collection does not persist in db but connection to postgres on docker enabled

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,33 @@
-%prod.quarkus.datasource.db-kind=postgresql
-%prod.quarkus.datasource.username=quarkus_test
-%prod.quarkus.datasource.password=quarkus_test
+#%prod.quarkus.datasource.db-kind=postgresql
+#%prod.quarkus.datasource.username=vector
+#%prod.quarkus.datasource.password=password
+
 
 quarkus.hibernate-orm.database.generation=drop-and-create
 quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=import.sql
 
 # Reactive config
-%prod.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost/quarkus_test
+#%prod.quarkus.datasource.reactive.url=vertx-reactive:postgresql://localhost/fruits
+#jdbc:postgresql://localhost:5432/mydatabase?user=myuser&password=mypassword&sslmode=require
+
+#quarkus.datasource.reactive.url=postgresql://localhost:5455/fruits?user=vector&password=password&sslmode=require
+
+
+quarkus.datasource.reactive.url=postgresql://localhost:5455/fruits
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=vector
+quarkus.datasource.password=password
+
+
+quarkus.datasource.devservices.enabled=false
+#quarkus.datasource.driver=io.vertx.pgclient.PgPool
+#quarkus.datasource.url=jdbc:postgresql://localhost:5455/fruits
+#quarkus.datasource.username=vector
+#quarkus.datasource.password=passwd
+#quarkus.datasource.db-kind=postgresql
+#quarkus.datasource.driver=org.postgresql.Driver
+#jdbc:postgresql://localhost:5455/fruits
 
 quarkus.log.category."io.quarkus.vertx.http.accesslog"=DEBUG
 #quarkus.log.file.enable=true
