--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=vector
 quarkus.datasource.password=password
 
-
 quarkus.datasource.devservices.enabled=false
 
-quarkus.log.category."io.quarkus.vertx.http.accesslog"=DEBUG
+quarkus.http.access-log.enabled=true
+
 
 #quarkus.log.file.enable=true
 #quarkus.log.file.path=/var/log/myapp.log
